--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
+# The bitbucket username and password to use, along with the owner for which repos to interact with.
 BITBUCKET_USERNAME=
 BITBUCKET_PASSWORD=
 BITBUCKET_REPO_OWNER=
+
+# The HTTP basic auth values to protect the webhooks with.
 HTTP_AUTH_USER=
 HTTP_AUTH_PASS=
